@@ -24,10 +24,10 @@ class Smarty_Internal_Compile_Append extends Smarty_Internal_CompileBase {
     {
         $this->compiler = $compiler;
         $this->required_attributes = array('var', 'value');
-        $this->optional_attributes = array('global', 'nocache', 'index');
+        $this->optional_attributes = array('scope', 'nocache', 'index');
 
         $_nocache = 'null';
-        $_global = 'null'; 
+        $_scope = 'null'; 
         // check for nocache attribute before _get_attributes because
         // it shall not controll caching of the compiled code, but is a parameter
         if (isset($args['nocache'])) {
@@ -40,15 +40,14 @@ class Smarty_Internal_Compile_Append extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        if (isset($_attr['global']) && $_attr['global'] == 'true') {
-            $_global = 'true';
-            $_global_boolean = true;
+        if (isset($_attr['scope'])) {
+            $_scope = trim($_attr['scope'],'\'');
         } 
         // compiled output
         if (isset($_attr['index'])) {
-            return "<?php \$_smarty_tpl->append($_attr[var],array($_attr[index] => $_attr[value]),true,$_nocache,$_global);?>";
+            return "<?php \$_smarty_tpl->append($_attr[var],array($_attr[index] => $_attr[value]),true,$_nocache,$_scope);?>";
         } else {
-            return "<?php \$_smarty_tpl->append($_attr[var],$_attr[value],false,$_nocache,$_global);?>";
+            return "<?php \$_smarty_tpl->append($_attr[var],$_attr[value],false,$_nocache,$_scope);?>";
         } 
     } 
 } 
