@@ -24,10 +24,10 @@ class Smarty_Internal_Compile_Assign extends Smarty_Internal_CompileBase {
     {
         $this->compiler = $compiler;
         $this->required_attributes = array('var', 'value');
-        $this->optional_attributes = array('global', 'nocache', 'index');
+        $this->optional_attributes = array('scope', 'nocache', 'index');
 
         $_nocache = 'null';
-        $_global = 'null';
+        $_scope = 'null'; 
         // check for nocache attribute before _get_attributes because
         // it shall not controll caching of the compiled code, but is a parameter
         if (isset($args['nocache'])) {
@@ -40,22 +40,22 @@ class Smarty_Internal_Compile_Assign extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        if (isset($_attr['global']) && $_attr['global'] == 'true') {
-            $_global = 'true';
-            $_global_boolean = true;
+        if (isset($_attr['scope'])) {
+            $_scope = trim($_attr['scope'],'\'');  
         } 
+
         if (isset($_attr['index'])) {
             $_index = $_attr['index'];
         } 
         // compiled output
         if (isset($_attr['index'])) {
             if ($_attr['index'] == '') {
-                return "<?php \$_smarty_tpl->append($_attr[var],$_attr[value],false,$_nocache,$_global);?>";
+                return "<?php \$_smarty_tpl->append($_attr[var],$_attr[value],false,$_nocache,$_scope);?>";
             } else {
-                return "<?php \$_tmp$_attr[index] = $_attr[value]; \$_smarty_tpl->append($_attr[var],\$_tmp,true,$_nocache,$_global);?>";
+                return "<?php \$_tmp$_attr[index] = $_attr[value]; \$_smarty_tpl->append($_attr[var],\$_tmp,true,$_nocache,$_scope);?>";
             } 
         } else {
-            return "<?php \$_smarty_tpl->assign($_attr[var],$_attr[value],$_nocache,$_global);?>";
+            return "<?php \$_smarty_tpl->assign($_attr[var],$_attr[value],$_nocache,$_scope);?>";
         } 
     } 
 } 
