@@ -1,3 +1,7 @@
+04/07/2009
+- changed variable scopes to SMARTY_LOCAL_SCOPE, SMARTY_PARENT_SCOPE, SMARTY_ROOT_SCOPE to avoid possible conflicts with user constants
+- Smarty variable global attribute replaced with scope attribute
+
 04/06/2009
 - variable scopes LOCAL_SCOPE, PARENT_SCOPE, ROOT_SCOPE
 - more getter/setter methodes
